# GridSim

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
assets/: config.json
src/: CMakeLists.txt  main.cpp
src/core/: application.cpp  application.h  clock.cpp  clock.h  config.cpp  config.h  logger.cpp  logger.h
src/ecs/: component_pool.h  entity.h  registry.cpp  registry.h
src/sims/: dummy_sim.cpp  dummy_sim.h  isimulation.h
tests/: CMakeLists.txt  test_app_loop.cpp  test_clock.cpp  test_component_pool.cpp  test_config.cpp  test_registry.cpp  test_sanity.cpp
